src/index.css
body {
  font-family: "Roboto", Arial, Helvetica, sans-serif;
  margin: 0;
}

/* Removes the blue highlight that shows when tapping a button on mobile */
input,
button,
select,
a {
  -webkit-tap-highlight-color: transparent;
}

/*For the web navbar*/
.NavbarContainer {
  background-color: #030612;
  font-weight: bold;
}

/* For divs that take up the main part of the screen, the main content */
.LargeContainer {
  display: flex;
  background-color: #1e2033;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding-bottom: 50px;
}

/* Container for the prediction screens, instead of using LargeContainer */
.PredictionContainer {
  display: flex;
  flex-direction: column;
  background-color: #1e2033;
  padding-bottom: 50px;
}

/* For the footer mainly, or anything that's just the opposite of the user color scheme */
.ReverseBackground {
  background-color: #fff;
}

/* All modals look like this */
.ModalContainer {
  background-color: #030612;
  border-style: solid;
  border-color: #000;
  display: flex;
  flex-direction: column;
  width: 70%;
  position: fixed; /* Position it relative to the viewport */
  top: 50%; /* Align the top edge of the modal at 50% of viewport height */
  left: 50%; /* Align the left edge of the modal at 50% of viewport width */
  transform: translate(-50%, -50%); /* Center the modal perfectly */
  border-radius: 13px;
  align-items: center;
}

/* The scrollable area in the modal */
.ModalButtonSection {
  display: flex;
  flex-direction: column;
  max-height: 250px;
  overflow-y: auto;
}

/* The background blur of the modal */
.ModalOverlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(200, 200, 200, 0.3);
}

/* The whole user account screen */
.UserAccountScreen {
  background-color: #1e2033;
  display: flex;
  flex-direction: row;
  padding-bottom: 50px;
  padding-left: 20px;
}

/* The whole user account screen for mobile */
.UserAccountScreenMobile {
  background-color: #1e2033;
  display: flex;
  flex-direction: row;
  padding-bottom: 50px;
  padding-left: 10px;
}

/* For the main view in the user account screen */
.UserAccountDetailsSection {
  padding-left: 15px;
  border-radius: 10px;
  background-color: #000;
  margin-top: 12px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
}

/* Displays all product columns */
.ComparisonTable {
  max-width: 90vw;
  overflow-x: auto;
  column-gap: 20px;
  row-gap: 20px;
  padding-bottom: 15px;
  padding-top: 15px;
  padding-left: 15px;
  padding-right: 15px;
}

/* Displays specs for each category in a row for each product */
.ComparisonCell {
  border-style: solid;
  border-width: 2px;
  border-color: #4ca0d7;
  border-radius: 3px;
  background-color: #4ca0d7;
  box-shadow: 0px 0px 4px 3px rgba(42, 117, 187, 0.6);
  text-align: center;
  display: flex;
  flex-direction: column;
}

/* Displays pros for each product */
.ProCell {
  border-style: solid;
  border-width: 2px;
  border-color: #39ff14;
  border-radius: 3px;
  background-color: #39ff14;
  box-shadow: 0px 0px 4px 3px rgba(60, 216, 25, 0.6);
  text-align: center;
  display: flex;
  flex-direction: column;
}

/* Plain view that scrolls horizontally */
.ScrollViewX {
  overflow-x: auto;
}

/* Plain view that scrolls vertically */
.ScrollViewY {
  overflow-y: auto;
}

/* For the section on the account handler where all the input fields and buttons are */
.WebAccountHandlerInputSection {
  width: 50vw;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
}

/* Each trending comparison parent container */
.TrendingComparison {
  background-color: #030612;
}

/* The product names and VS text */
.TrendingComparisonText {
  color: #fff;
  text-align: center;
  padding: 0 2px;
}

/* Completely unaltered text, just matches the appropriate color scheme */
.PlainText {
  color: #fff;
}

/* Same as plain text, but text aligned to the center */
.SimpleText {
  color: #fff;
  text-align: center;
}

/* For the SpecGauge Logo */
#LogoText {
  color: #4ca0d7;
  font-size: 40px;
  padding: 10px;
  text-align: center;
}

/* Similar to logo but smaller, usually for Screens or Modals */
.HeaderText {
  color: #4ca0d7;
  font-size: 25px;
  padding: 10px;
  text-align: center;
  font-weight: bold;
}

/* Header on the account screen page */
.UserAccountDetailsHeader {
  color: #4ca0d7;
  font-size: 25px;
  font-weight: bold;
}

/* When displaying errors */
.ErrorText {
  color: #f00;
  font-size: 15;
  padding: 10px;
  text-align: center;
}

/* When displaying success messages */
.SuccessText {
  color: rgb(60, 173, 25);
  font-size: 15;
  font-weight: 600;
  padding: 10px;
  text-align: center;
}

/* Buffer animation */
.ActivityIndicator {
  margin: 0 auto;
  border: 8px solid #f3f3f3;
  border-radius: 50%;
  border-top: 8px solid #4ca0d7;
  width: 30px;
  height: 30px;
  -webkit-animation: spin 2s linear infinite; /* Safari */
  animation: spin 2s linear infinite;
}

/* Buffer animation */
@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* Progress bar background */
.progress {
  width: 80%;
  background-color: #e0e0e0;
  border-radius: 5px;
  overflow: hidden;
  margin-top: 10px;
}

/* Progress bar actual progress */
.progress-bar {
  height: 20px;
  background-color: #4ca0d7; /* Change to your preferred color */
  transition: width 0.3s ease;
}

/* For the footer mainly, or anything that's just the opposite of the user color scheme */
.ReversePlainText {
  color: #000;
}

/* Links in the navbar */
.NavbarText {
  text-decoration: none;
  color: #fff;
  padding: 8px;

  &:hover {
    color: #eee;
  }

  &:active {
    color: #aaa;
  }
}

/* For displaying user settings and details */
.UserAccountDetails {
  color: #3b85ae;
  font-size: 30;
}

/* Category Name */
.ComparisonRowName {
  color: #000;
}
/* ... */

